Refactor country and job type lists to use collect